ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: location-logger
  labels:
    proxy: location-logger
spec:
  ports:
  - name: location-logger
    port: 80
    protocol: TCP
    targetPort: 8000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: location-logger
  labels:
    proxy: location-logger
subsets:
- addresses:
  - ip: 10.3.0.4
  ports:
  - name: location-logger
    port: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: location-logger-external
  labels:
    name: location-logger-external
    proxy: location-logger
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: ipv4.d464.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx-external
  rules:
    - host: location-logger.d464.sh
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: location-logger
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: location-logger
  labels:
    name: location-logger
    proxy: location-logger
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: location-logger.d464.sh
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: location-logger
                port:
                  number: 80
